01-application-basics/05-deployment-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: application-basics-cli
  name: 'hello-deployment'
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: quay.io/danielfernandez/ocp4-admin-workshop:v2
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  paused: false
