01-application-basics/06-deployment-with-errors.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: application-basics-cli
  name: 'hello-deployment'
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 5
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello1
          image: quay.io/danielfernandez/ocp4-admin-workshop:v1
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: "RuntimeDefault"
        - name: hello2
          image: quay.io/danielfernandez/ocp4-admin-workshop:v1
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: "RuntimeDefault"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  paused: false
