01-application-basics/09-daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: application-basics-cli
  name: 'hello-deployment'
spec:
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: quay.io/danielfernandez/ocp4-admin-workshop:v1
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: "RuntimeDefault"
