01-application-basics/06-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: application-basics-cli
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
